--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="data/Resume.docx" class="btn">Download CV</a>
         </div>
         <div class="home-image">
-            <img src="data/photo.jpg" alt="">
+            <img src="./data/photo.jpg" alt="">
         </div>
     </section>
 
