--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://github.com/Sharavanakumar-Ramalingam"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/just_sharavana/"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="data/Resume.docx" class="btn">Download CV</a>
+            <a href="./data/Resume.docx" class="btn">Download CV</a>
         </div>
         <div class="home-image">
             <img src="./data/photo.jpg" alt="">
@@ -46,7 +46,7 @@
     <!--about section-->
     <section class="about" id="about">
         <div class="about-image">
-            <img src="data/photo.jpg" alt="">
+            <img src="./data/photo.jpg" alt="">
         </div>
 
         <div class="about-content">
