--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#" class="logo">Portfolio</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
+        <i class='bx bxs-x-circle' ></i>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
