--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello,It's Me</h3>
-            <h1>Sharavana kuamr R G</h1>
+            <h1>Sharavana kumar R G</h1>
             <h3>And I am a <span>Fullstack Developer</span></h3>
             <div class="socialmedia">
                 <a href="https://www.linkedin.com/in/sharavanakumar06"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="https://github.com/Sharavanakumar-Ramalingam"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/just_sharavana/"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="https://github.com/karthik-noveau/sharavanaKumar-batch-9/blob/master/Resume.docx" class="btn">Download CV</a>
+            <a href="C:/Users/sharavana Kumar/Desktop/portfolio/Resume.docx" class="btn">Download CV</a>
         </div>
         <div class="home-image">
             <img src="C:/Users/sharavana Kumar/Desktop/portfolio/photo.jpg" alt="">
@@ -84,18 +84,15 @@
     <!--contact section-->
     <section class="contact" id="contact">
         <h2 class="heading">Contact<span>Me</span></h2>
-        <form action="send_email.php" method="post">
+        <form action="https://formsubmit.co/surajram3006@gmail.com" method="POST">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email">
+            <input type="hidden" name="_captcha" value="false">
+            <input type="text" name="name" placeholder="your name" required>
+            <input type="email" name="email" placeholder="your mail">
             </div>
-            <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Messsage"></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
+            <textarea name="Message" placeholder="Your Message" id="" cols="30" rows="10"></textarea>
+            <button type="submit" class="btn">Send</button>
+       </form>
     </section>
     <!--footer section-->
     <footer class="footer">
