--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@
         <h2 class="heading">Contact<span>Me</span></h2>
         <form action="send_email.php" method="post">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email">
-            </div>
-            <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
+                <input type="text" name="fullName" placeholder="Full Name">
+                <input type="email" name="email" placeholder="Email">
             </div>
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Messsage"></textarea>
             <input type="submit" value="Send Message" class="btn">
