--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                 <a href="https://github.com/Sharavanakumar-Ramalingam"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/just_sharavana/"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="C:/Users/sharavana Kumar/Desktop/portfolio/Resume.docx" class="btn">Download CV</a>
+            <a href="" class="btn">Download CV</a>
         </div>
         <div class="home-image">
-            <img src="C:/Users/sharavana Kumar/Desktop/portfolio/photo.jpg" alt="">
+            <img src="" alt="">
         </div>
     </section>
 
     <!--about section-->
     <section class="about" id="about">
         <div class="about-image">
-            <img src="C:/Users/sharavana Kumar/Desktop/portfolio/photo.jpg" alt="">
+            <img src="" alt="">
         </div>
 
         <div class="about-content">
