--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <input type="text" name="fullName" placeholder="Full Name">
                 <input type="email" name="email" placeholder="Email">
             </div>
-            <textarea name="messages" id="" cols="30" rows="10" placeholder="Your Messsage"></textarea>
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Messsage"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
