--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!--home section-->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello,It's Me</h3>
+            <h3>Hello,I am </h3>
             <h1>Sharavana kumar R G</h1>
-            <h3>And I am a <span>Fullstack Developer</span></h3>
+            <h3>An aspiring <span>Fullstack Developer</span></h3>
             <div class="socialmedia">
                 <a href="https://www.linkedin.com/in/sharavanakumar06"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="https://github.com/Sharavanakumar-Ramalingam"><i class='bx bxl-github'></i></a>
