--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <a href="C:/Users/sharavana Kumar/Desktop/portfolio/Resume.docx" class="btn">Download CV</a>
         </div><br>
         <div class="home-image">
-            <img src="C:/Users/sharavana Kumar/OneDrive/Desktop/portfolio/saro.jpg" alt="">
+            <img src="images/saro.jpg" alt="My Photo">
         </div>
     </section>
 
     <!--about section-->
     <section class="about" id="about">
         <div class="about-image">
-            <img src="C:/Users/sharavana Kumar/OneDrive/Desktop/portfolio/saro.jpg" alt="">
+            <img src="images/saro.jpg" alt="My Photo">
         </div>
 
         <div class="about-content">
