--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="C:/Users/sharavana Kumar/Desktop/portfolio/Resume.docx" class="btn">Download CV</a>
         </div><br>
         <div class="home-image">
-            <img src="images/saro1.png" alt="My Photo">
+            <img src="images/saro.png" alt="My Photo">
         </div>
     </section>
 
