--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://github.com/Sharavanakumar-Ramalingam"><i class='bx bxl-github'></i></a>
                 <a href="https://www.instagram.com/just_sharavana/"><i class='bx bxl-instagram'></i></a>
             </div>
-            <a href="C:/Users/sharavana Kumar/Desktop/portfolio/Resume.docx" class="btn">Download CV</a>
+            <a href="images/Resume1.docx" class="btn">Download CV</a>
         </div><br>
         <div class="home-image">
             <img src="images/saro.png" alt="My Photo">
